# prisma-client-rust

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs  lib.rs
.cargo/: config.toml
cli/: Cargo.toml  README.md
cli/src/: keywords.rs  lib.rs  main.rs  prisma_cli.rs
cli/src/binaries/: mod.rs  platform.rs
cli/src/generator/: client.rs  dmmf.rs  enums.rs  header.rs  internal_enums.rs  mod.rs  models.rs  prelude.rs  read_filters.rs  types.rs
cli/src/generator/ast/: dmmf.rs  enums.rs  filters.rs  index.rs  mod.rs  models.rs  read_filters.rs  scalars.rs  write_filters.rs
cli/src/generator/codegen/: client.rs  enums.rs  header.rs  internal_enums.rs  mod.rs  model.rs  models.rs
cli/src/generator/composite_types/: data.rs  field.rs  mod.rs  order_by.rs  set_params.rs
cli/src/generator/models/: actions.rs  create.rs  data.rs  field.rs  include.rs  include_select.rs  mod.rs  order_by.rs  outputs.rs  pagination.rs  partial.rs  partial_unchecked.rs  select.rs  set_params.rs  types.rs  where_params.rs  with_params.rs
cli/src/jsonrpc/: methods.rs  mod.rs
codegen/: .gitignore  Cargo.toml
codegen/src/: cli.rs  lib.rs  main.rs
codegen/src/binaries/: test.rs
codegen/src/generator/: dmmf.rs  mod.rs  types.rs
codegen/src/generator/codegen/: actions.rs  client.rs  mod.rs  model.rs  models.rs  query.rs
codegen/src/generator/templates/: client.rstpl
codegen/src/jsonrpc/: methods.rs
codegen/tests/templates/: expected.rs  schema.prisma
core/: Cargo.toml
core/src/: lib.rs  query.rs
core/src/binaries/: bindata.rs  mod.rs  platform.rs  unpack.rs
core/src/builder/: mod.rs
core/src/engine/: protocol.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  prisma_cli.rs
crates/cli/src/binaries/: mod.rs  platform.rs
crates/cli/src/generator/: enums.rs  header.rs  internal_enums.rs  mod.rs  read_filters.rs  types.rs  write_params.rs
crates/generator/: Cargo.toml
crates/generator-macros/: Cargo.toml
crates/generator-macros/src/: filter.rs  lib.rs  partial_unchecked.rs  select_include.rs
crates/generator-macros/src/select_include/: definitions.rs  mod.rs
crates/generator/src/: enums.rs  header.rs  lib.rs  read_filters.rs  types.rs  write_params.rs
crates/generator/src/composite_types/: data.rs  mod.rs  order_by.rs  set_params.rs  where_params.rs
crates/generator/src/models/: actions.rs  create.rs  data.rs  filter.rs  include_select.rs  mod.rs  order_by.rs  pagination.rs  partial_unchecked.rs  select_include.rs  set_params.rs  types.rs  where_params.rs  with_params.rs
crates/lib/: Cargo.toml
crates/lib/src/: actions.rs  client.rs  gen_macros.rs  lib.rs  migrations.rs  operator.rs  prisma_value.rs  raw.rs  scalar_types.rs
crates/lib/src/queries/: batch.rs  count.rs  create.rs  create_many.rs  create_unchecked.rs  delete.rs  delete_many.rs  error.rs  execute_raw.rs  find_first.rs  find_many.rs  find_unique.rs  include.rs  mod.rs  mongo_raw.rs  query.rs  query_raw.rs  select.rs  update.rs  update_many.rs  update_unchecked.rs  upsert.rs
crates/sdk/example/app/: Cargo.toml
crates/sdk/example/generator/: Cargo.toml
crates/sdk/example/prisma-cli/: Cargo.toml
examples/axum-graphql/: Cargo.toml  README.md
examples/axum-graphql/prisma/: schema.prisma
examples/axum-graphql/src/: main.rs
examples/axum-graphql/src/graphql/: mod.rs  schema.rs  types.rs
examples/axum-rest/: Cargo.toml  README.md
examples/axum-rest/prisma/: schema.prisma
examples/axum-rest/src/: main.rs  routes.rs
examples/basic/: Cargo.toml  README.md
examples/basic/prisma/: schema.prisma
examples/basic/src/: main.rs
examples/rocket/: Cargo.toml  README.md  Rocket.toml
examples/rocket/prisma/: schema.prisma
examples/rocket/src/: main.rs
examples/rspc/: Cargo.toml  README.md  bindings.ts
examples/rspc/prisma/: schema.prisma
examples/rspc/src/: main.rs
examples/simple/: Cargo.toml  README.md  main.rs  prisma.rs
examples/simple/prisma/: schema.prisma
examples/simple/src/: db.expected.rs  main.rs
examples/tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri/src-tauri/.cargo/: config.toml
examples/tauri/src-tauri/prisma/: schema.prisma
examples/tauri/src-tauri/src/: main.rs
integration-tests/: Cargo.toml  bruh.rs  out.rs  out.txt  schema.prisma  stuff.rs
integration-tests/.cargo/: config.toml
integration-tests/migrations/20220411194706_/: migration.sql
integration-tests/migrations/20220430120008_/: migration.sql
integration-tests/migrations/20220505103336_/: migration.sql
integration-tests/migrations/20220611124126_/: migration.sql
integration-tests/migrations/20220816043623_init/: migration.sql
integration-tests/migrations/20220817004232_init/: migration.sql
integration-tests/migrations/20220817004340_underscored/: migration.sql
integration-tests/migrations/20220909004422_init/: migration.sql
integration-tests/migrations/20221004185242_init/: migration.sql
integration-tests/migrations/20230225213923_add_unsupported_field/: migration.sql
integration-tests/tests/: batch.rs  callbacks.rs  count.rs  create.rs  create_many.rs  delete.rs  delete_many.rs  find_first.rs  find_many.rs  find_unique.rs  github_issues.rs  include.rs  lib.rs  mock.rs  order.rs  partial.rs  r_hash.rs  raw.rs  select.rs  specta.rs  transaction.rs  types.rs  unsupported.rs  update.rs  upsert.rs  utils.rs  with.rs
macros/: Cargo.toml
macros/src/: lib.rs  partial.rs  partial_unchecked.rs
prisma-cli/: Cargo.toml
sdk/: Cargo.toml
sdk/example/app/: Cargo.toml
sdk/example/app/.cargo/: config.toml
sdk/example/app/prisma/: schema.prisma
sdk/example/app/src/: main.rs
sdk/example/generator/: Cargo.toml
sdk/example/generator/src/: lib.rs
sdk/example/lib/src/: lib.rs
sdk/example/prisma-cli/: Cargo.toml
sdk/src/: args.rs  casing.rs  dmmf.rs  extensions.rs  jsonrpc.rs  keywords.rs  lib.rs  prisma_cli.rs  runtime.rs  utils.rs
sdk/src/binaries/: mod.rs
tests/database/mongodb/: .env  Cargo.toml
tests/database/postgres/: Cargo.toml  out.txt  package-lock.json  package.json
tests/database/sqlserver/: Cargo.toml
(+278 files in other folders)
