[workspace]
members = [
  "examples/*",
  "examples/tauri/src-tauri",
  "integration-tests",
  "tests/*/*",
  "crates/*",
  "crates/sdk/example/*",
  "prisma-cli"
]
exclude = ["examples/tauri"]
resolver = "2"

[workspace.dependencies]
prisma-client-rust = { path = "crates/lib" }

diagnostics = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
dmmf = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
prisma-models = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
psl = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
query-core = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
schema-core = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
request-handlers = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }
user-facing-errors = { git = "https://github.com/Brendonovich/prisma-engines", branch = "5.1.0-patched" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

convert_case = "0.6.0"
rspc = { version = "=1.0.0-rc.5" }

specta = { version = "=2.0.0-rc.1" }
tauri-specta = { git = "https://github.com/oscartbeaumont/tauri-specta", branch = "v2" }
