[workspace]
members = [
  "examples/*",
  "examples/tauri/src-tauri",
  "integration-tests",
  "tests/*/*",
  "crates/*",
  "crates/sdk/example/*",
  "prisma-cli",
]
exclude = ["examples/tauri"]
resolver = "2"

[workspace.dependencies]
prisma-client-rust = { path = "crates/lib" }

diagnostics = { git = "https://github.com/Brendonovich/prisma-engines", branch = "new-4.14.0-pcr" }
dmmf = { git = "https://github.com/Brendonovich/prisma-engines", branch = "new-4.14.0-pcr" }
prisma-models = { git = "https://github.com/Brendonovich/prisma-engines", branch = "new-4.14.0-pcr" }
psl = { git = "https://github.com/Brendonovich/prisma-engines", branch = "new-4.14.0-pcr" }
query-core = { git = "https://github.com/Brendonovich/prisma-engines", branch = "new-4.14.0-pcr" }
schema-core = { git = "https://github.com/Brendonovich/prisma-engines", branch = "new-4.14.0-pcr" }
request-handlers = { git = "https://github.com/Brendonovich/prisma-engines", branch = "new-4.14.0-pcr" }
user-facing-errors = { git = "https://github.com/Brendonovich/prisma-engines", branch = "new-4.14.0-pcr" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

convert_case = "0.6.0"
rspc = { git = "https://github.com/spacedriveapp/spacedriveapp.git", rev = "12fdbf025ea9dfca51a71bb81d6245958eb7c3fd" }

specta = { git = "https://github.com/oscartbeaumont/specta", rev = "673e3f55d246cd90e70c706ba4ca7f5818e99ba9" }
