[package]
name = "prisma-client-rust-cli"
version = "0.6.1"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2021"
rust-version = "1.62"

[features]
default = []
rspc = []
sqlite-create-many = ["datamodel/sqlite-create-many"]
migrations = []

[dependencies]
serde_path_to_error = "0.1.7"
quote = "1.0.18"
syn = "1.0.91"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
proc-macro2 = "1.0.39"

prisma-client-rust-sdk = { path = "../sdk" }

datamodel = { git = "https://github.com/Brendonovich/prisma-engines", rev = "1a9235ce5c50bb629cb63235ca8b5ca82198cada" }
prisma-models = { git = "https://github.com/Brendonovich/prisma-engines", rev = "1a9235ce5c50bb629cb63235ca8b5ca82198cada" }
request-handlers = { git = "https://github.com/Brendonovich/prisma-engines", rev = "1a9235ce5c50bb629cb63235ca8b5ca82198cada" }
query-core = { git = "https://github.com/Brendonovich/prisma-engines", rev = "1a9235ce5c50bb629cb63235ca8b5ca82198cada" }
