[package]
name = "prisma-client-rust-cli"
version = "0.6.2"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2021"
rust-version = "1.62"

[features]
default = ["mysql", "sqlite", "mssql", "postgresql", "mongodb"]
rspc = []
migrations = []
sqlite-create-many = ["prisma-client-rust-sdk/sqlite-create-many"]

mysql = ["datamodel/sql", "prisma-client-rust-sdk/mysql"]
sqlite = ["datamodel/sql", "prisma-client-rust-sdk/sqlite"]
mssql = ["datamodel/sql", "prisma-client-rust-sdk/mssql"]
postgresql = ["datamodel/sql", "prisma-client-rust-sdk/postgresql"]
mongodb = ["datamodel/mongodb", "prisma-client-rust-sdk/mongodb"]

[dependencies]
serde_path_to_error = "0.1.7"
quote = "1.0.18"
syn = "1.0.91"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
proc-macro2 = "1.0.39"

prisma-client-rust-sdk = { path = "../sdk", default_features = false }
