[package]
name = "prisma-client-rust-codegen"
version = "0.1.2"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2018"
description = "A prisma client for Rust"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "3.0.2"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
http = "0.2.4"
flate2 = "1.0.20"
regex = "1.5.4"
serde_path_to_error = "0.1"
tinytemplate = "1.2.1"
convert_case = "0.4.0"