[package]
name = "prisma-client-rust-codegen"
version = "0.2.1"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2018"
description = "A prisma client for Rust"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "3.0.2"
http = "0.2.4"
flate2 = "1.0.20"
regex = "1.5.4"
serde_path_to_error = "0.1"
convert_case = "0.4.0"
syn = "1.0.86"
quote = "1.0.15"
reqwest = {version="0.11.9", features=["blocking"]}
prisma-client-rust-core = { path = "../core", version = "0.2.1" }
