[package]
name = "prisma-client-rust-codegen"
version = "0.3.0"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2021"
license = "MIT"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2.4"
convert_case = "0.4.0"
syn = "1.0.86"
quote = "1.0.15"

prisma-client-rust-core = { path = "../core", version = "0.3.0" }