[package]
name = "prisma-client-rust-core"
version = "0.2.1"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2021"
license = "MIT"


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "3.0.2"
http = "0.2.4"
flate2 = "1.0.20"
reqwest = {version="0.11.9", features=["blocking"]}
serde_path_to_error = "0.1.7"

query-core = { git = "https://github.com/prisma/prisma-engines", tag = "3.10.0" }
request-handlers = { git = "https://github.com/prisma/prisma-engines", tag = "3.10.0" }
prisma-models = { git = "https://github.com/prisma/prisma-engines", tag = "3.10.0" }
datamodel = { git = "https://github.com/prisma/prisma-engines", tag = "3.10.0" }
graphql-parser = { git = "https://github.com/prisma/graphql-parser" }