[package]
name = "prisma-client-rust-macros"
version = "0.6.10"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case.workspace = true
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = "1.0.91"

specta = { workspace = true, optional = true }
