[package]
name = "prisma-cli"
version = "0.0.0"
edition = "2021"

[features]
mocking = ["prisma-client-rust-cli/mocking"]
specta = ["prisma-client-rust-cli/specta"]

[dependencies]
prisma-client-rust-cli = { features = [
  "sqlite-create-many",
  "sqlite",
  "migrations"
], default_features = false, path = "../cli" }
