[package]
name = "prisma-client-rust-sdk"
version = "0.6.4"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
edition = "2021"
rust-version = "1.62"

[features]
default = ["mysql", "sqlite", "mssql", "postgresql", "mongodb"]

mysql = ["query-core/mysql"]
sqlite = ["query-core/sqlite"]
mssql = ["query-core/mssql"]
postgresql = ["query-core/postgresql"]
mongodb = ["query-core/mongodb"]

sqlite-create-many = ["psl/sqlite-create-many"]

[dependencies]
convert_case = "0.5.0"
serde_path_to_error = "0.1.7"
quote = "1.0.18"
syn = "1.0.91"
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
proc-macro2 = "1.0.39"
thiserror = "1.0.37"

prisma-models = { git = "https://github.com/Brendonovich/prisma-engines", rev = "6bad339fc5b8bbc77e028eeae2038cf2ade2e6be" }
request-handlers = { git = "https://github.com/Brendonovich/prisma-engines", rev = "6bad339fc5b8bbc77e028eeae2038cf2ade2e6be" }
query-core = { git = "https://github.com/Brendonovich/prisma-engines", rev = "6bad339fc5b8bbc77e028eeae2038cf2ade2e6be" }
dmmf = { git = "https://github.com/Brendonovich/prisma-engines", rev = "6bad339fc5b8bbc77e028eeae2038cf2ade2e6be" }
dml = { git = "https://github.com/Brendonovich/prisma-engines", rev = "6bad339fc5b8bbc77e028eeae2038cf2ade2e6be" }
psl = { git = "https://github.com/Brendonovich/prisma-engines", rev = "6bad339fc5b8bbc77e028eeae2038cf2ade2e6be" }
