[package]
name = "basic-example"
version = "0.1.0"
edition = "2021"
default-run = "basic-example"

[dependencies]
prisma-client-rust = { workspace = true, features = ["migrations", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
tokio = {features=["macros","rt-multi-thread"], version = "1.17.0"}
tracing = "0.1.36"
