[package]
name = "rocket-example"
version = "0.1.0"
edition = "2021"
# change to whatever you name your package
default-run = "rocket-example"

[dependencies]
prisma-client-rust = { workspace = true, features = ["migrations", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
