[package]
name = "rspc-example"
version = "0.1.0"
edition = "2021"
default-run = "rspc-example"

[dependencies]
prisma-client-rust = { features = ["rspc", "migrations", "sqlite", "mocking"], default-features = false, path = "../../" }
serde = { version = "1.0", features = ["derive"] }
rspc = { version = "0.1.3" }
tokio = "1.20.1"
specta = "0.0.6"
