[package]
name = "rspc-example"
version = "0.1.0"
edition = "2021"
default-run = "rspc-example"

[dependencies]
prisma-client-rust = { features = ["rspc", "migrations", "sqlite", "mocking"], workspace = true }
serde = { version = "1.0", features = ["derive"] }
rspc.workspace = true
tokio = "1.20.1"
