[package]
name = "simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { path="../../" }
serde = { version = "1.0", features = ["derive"] }
tokio = {features=["macros"], version = "1.17.0"}
