[package]
name = "prisma-client-rust-tauri-example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "^2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prisma-client-rust = { workspace = true, features = [
  "sqlite",
  "migrations",
  "mocking",
  "specta",
] }
specta = { workspace = true }
tauri-specta = { workspace = true, features = [
  "typescript",
] } # TODO: this will be broke
tokio = { version = "1.26.0", features = ["macros"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
