[package]
name = "sdk-example-generator"
version = "0.1.0"
edition = "2021"

[features]
mysql = ["prisma-client-rust-sdk/mysql"]
sqlite = ["prisma-client-rust-sdk/sqlite"]
mssql = ["prisma-client-rust-sdk/mssql"]
postgresql = ["prisma-client-rust-sdk/mssql"]
mongodb = ["prisma-client-rust-sdk/mongodb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-sdk = { path = "../..", default-features = false }
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.40"
