[package]
name = "postgres-tests"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Allan <brendonovich@outlook.com>"]
autotests = false
autobenches = false

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true

[dependencies]
prisma-client-rust = { workspace = true, features = [
  "postgresql",
  "migrations",
] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt", "macros"] }
prisma-client-rust = { workspace = true, features = [
  "postgresql",
  "migrations",
] }
