[package]
name = "sdk-example-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { workspace = true, features = ["migrations"] }
sdk-example-lib = { path = "../lib" }
serde = { version = "1.0.145", features = ["derive"] }
tokio = { version = "1.21.2", features = ["macros"] }
