[package]
name = "sdk-example-prisma-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust-cli = { path = "../../../cli", features = [
  "sqlite",
  "migrations",
] }
sdk-example-generator = { path = "../generator" }
